--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.0",
     "bootstrap": "^5.1.3",
+    "file-saver": "^2.0.5",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
@@ -43,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/file-saver": "^2.0.5"
   }
 }
