--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.0",
     "bootstrap": "^5.1.3",
+    "crypto-js": "^4.1.1",
     "file-saver": "^2.0.5",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/file-saver": "^2.0.5",
     "gh-pages": "^4.0.0"
   }
