--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-react-site",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://austinbray77.github.io/",
+  "homepage": "https://AustinBray77.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
