--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "crypto-js": "^4.1.1",
     "file-saver": "^2.0.5",
+    "luxon": "^3.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
     "@types/file-saver": "^2.0.5",
+    "@types/luxon": "^3.0.0",
     "gh-pages": "^4.0.0"
   }
 }
